--- a/index.html
+++ b/index.html
@@ -36,8 +36,21 @@
     </nav>
     </div>
     <div class="body">
-      <h2 id="about" class="ms-5 mt-2">About Me</h2>
-      <div class="about"></div>
+       <div class="about" id="about">
+        <div class="card mb-5 shadow-sm bg-light rounded ms-5 me-5 mt-5 " id="work">
+            <div class="row g-0">
+                    <div class="col-md-6">
+                        <h3 class="card-title ms-4 mt-5">About Me</h3>
+                        <p class="card-text ms-4">As a dedicated frontend developer, I excel in creating visually appealing and highly functional web applications using HTML, CSS, and JavaScript. With a strong foundation in frameworks like React and Angular, I bring designs to life with responsive, user-friendly interfaces. My experience in optimizing performance and ensuring cross-browser compatibility ensures seamless user experiences. I am adept at collaborating with backend developers and designers, translating their visions into pixel-perfect, interactive interfaces. Continuously learning and adapting to new technologies, I strive to deliver innovative solutions that meet and exceed client expectations.</p>
+                        <h5 class="card-title ms-4">Tech Stack:</h5>
+                        <p class="card-text ms-4">ReactJS, JavaScript, Typescript, MongoDB, ExpressJS, NodeJS, Git</p>
+                </div>
+                <div class="col-md">
+                    <img src="./images/user.gif" class="img-fluid rounded-circle mt-4 mb-4">
+                </div>
+            </div>
+        </div>
+      </div>
       <h2 class="text-center mb-3" id="skills">Skills</h2>
       <div class="container text-center">
         <div class="d-flex justify-content-around mb-4">
